<resources>
    <string name="app_name">laba2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="notifications">Notifications</string>
    <string name="name1">Roman Kamushken</string>
    <string name="time1">2 days ago</string>
    <string name="main_text1">Check out awesome updates for Android design kit for Figma. Now more screens and more categories.</string>
    <string name="replays">117 replays</string>
    <string name="name2">Tina Turbina</string>
    <string name="time2">18 minutes ago</string>
    <string name="main_text2">“into component container and with resizing constraints set????”</string>
    <string name="name3">Tomek Kuwalskij</string>
    <string name="account">Account</string>
</resources>