<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/card_color"
    android:layout_marginStart="@dimen/back_icon_margin"
    android:layout_marginEnd="@dimen/back_icon_margin"
    android:layout_marginTop="@dimen/fab_margin"

    >

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/photo"
            android:layout_width="@dimen/for_image"
            android:layout_height="@dimen/for_image"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/card_icon"
            android:src="@drawable/napoleon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

        </androidx.constraintlayout.utils.widget.ImageFilterView>

        <TextView
            android:id="@+id/name"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:text="@string/name1"
            android:textColor="@color/black"
            android:textSize="@dimen/card_name_font_size"
            app:layout_constraintStart_toEndOf="@id/photo"
            app:layout_constraintTop_toTopOf="@+id/photo">

        </TextView>

        <TextView
            android:id="@+id/years"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:text="@string/time1"
            android:textColor="@color/capacity_black"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name">

        </TextView>

        <TextView
            android:id="@+id/description"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_text_card"
            android:text="@string/main_text1"
            android:textColor="@color/black"
            android:textSize="@dimen/card_name_font_size"
            app:layout_constraintStart_toStartOf="@id/photo"
            app:layout_constraintTop_toBottomOf="@id/photo">

        </TextView>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/back_icon_margin"
            android:text="@string/gender_male"
            android:textAllCaps="true"
            android:textColor="@color/gender_color"
            android:textSize="@dimen/replays_font_size"
            app:layout_constraintStart_toStartOf="@id/description"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintBottom_toBottomOf="parent"
            >

        </TextView>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_icon"
            android:src="@drawable/like_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"

            >

        </androidx.constraintlayout.utils.widget.ImageFilterView>







</androidx.constraintlayout.widget.ConstraintLayout>